# opengl_second

./: .gitignore  CMakeLists.txt  LICENSE  README.md  helper.cpp  main.cpp  makethis.sh
.cache/clangd/index/: context.c.8A2753246267B309.idx  egl_context.c.B4993B5E1929CF35.idx  glad.c.C6B423781ECAB1EE.idx  glad.h.24C10B06CA483253.idx  glfw3.h.56FC3FCB736C8852.idx  glx_context.c.CB2F9595ED14EB6B.idx  helper.cpp.7E5B823C895B9C74.idx  init.c.DDCBDC1BBD4005B5.idx  input.c.BF8416C8746B19D0.idx  internal.h.9A01782A0FB91E2C.idx  khrplatform.h.B61463A9103902A9.idx  linux_joystick.c.5F2BECC5919A4E68.idx  linux_joystick.h.30B9EED8ADB6DA8F.idx  main.cpp.3820102EA431ADAD.idx  mappings.h.EFDE15217A2DE282.idx  monitor.c.1A8396C6EDE59446.idx  null_init.c.C828C44B15871EA5.idx  null_joystick.c.9D915A6F2D8AFD48.idx  null_joystick.h.6A5C992ABEA17AB9.idx  null_monitor.c.D66DAEDCC6AD6088.idx  null_platform.h.E70861F5C14AB20F.idx  null_window.c.E131BE8F673C9CC1.idx  osmesa_context.c.5E759ED5F312B49C.idx  platform.c.46ACABEB22D6F512.idx  platform.h.0BDE18AC1FF2A278.idx  posix_module.c.9048D645B812E8DD.idx  posix_thread.c.BA5CF758F728B658.idx  posix_thread.h.0D1CD74A2F62802F.idx  posix_time.c.2AC7053BC74C5F36.idx  posix_time.h.09149489891C102A.idx  vulkan.c.75EBD368D672A3BD.idx  window.c.14F43E471B0F29DA.idx  x11_init.c.2D56F202336F8C69.idx  x11_monitor.c.8EFCB8D7E76CD649.idx  x11_platform.h.B090FF8885F73EF1.idx  x11_window.c.60687BBEE3A2F967.idx  xkb_unicode.c.803277FFE8F89EC9.idx  xkb_unicode.h.48402B5D2B6FFAE4.idx
glad/: CMakeLists.txt
glad/src/: glad.c
shaders/: basic_f_shader.glsl
(+240 files in other folders)
